# svg-spriter-py

./: Cargo.toml  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs  main.rs  optimize.rs  spriter.rs
